src/components/memories/Memories.css
.memories {
  border-top: solid 2px #CCCCCC;
  border-right: solid 2px #CCCCCC;
  border-bottom: solid 2px #CCCCCC;
  max-width: 400px;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-color: #3366CC;
}

.logo-container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 130px;
}

.memories-feed {
  max-width: 500px;
}

.left-column {
  display: flex;
  flex-direction: column;
}

.warning-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.warning-icon {
  max-width: 100px;
  margin-bottom: 10px;
}

.memories-list {
  height: 340px;
  overflow-y: scroll;
  padding: 0 10px;
  border-bottom: solid 1px black;
  background-color: white;
}

.memories-form {
  padding: 20px 50px;
  display: flex;
  flex-direction: column;
  height: 100%;
  margin-bottom: 15px;
}

.button {
  width: 100px;
}

.banner {
  background-color: #CCCCCC;
  padding: 3px 10px;
}

.memory {
  background-color: #E0FFE3;
  margin: 20px 0;
  width: 100%;
  border: solid 1px #a4daaa;
}

.memory-form {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.memory-info {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  border-top: solid 1px #a4daaa;
  color: dimgray;
  background-color: #effcf1;
  width: 100%;
}

.memory-info>p {
  margin: 5px 0;
  font-size: 12px;
  padding: 0px 10px;
}

.memory-text {
  width: 93%;
  margin: 10px;
  background-color: #E0FFE3;
  border: none;
}

.memory-name {
  padding: 2px 2px;
  margin: 2px 10px;
  border: none;
  background-color: #effcf1;
  color: dimgray;
}

.memory-crud {
  display: flex;
  flex-direction: row;
}

.memory-button {
  font-size: 12px;
  padding: 0 10px;
  margin: 5px 0;
  background: none;
  border: none;
  color: dimgray;
}

.memory-button:hover {
  text-decoration: underline;
  cursor: pointer;
}

.memories-form-name,
.memories-form-text {
  background: #FFFFFF;
  border-style: solid;
  border-width: 2px;
  border-left-color: dimgrey;
  border-top-color: dimgrey;
  border-bottom-color: #D7D0C8;
  border-right-color: #D7D0C8;
  box-sizing: border-box;
}

.memories-form-name {
  margin-bottom: 15px;
  padding: 5px;
  background-color: #E6F0F9;
}

.memories-cta {
  margin-bottom: 15px;
  color: white;
}

textarea {
  font-family: Arial, Helvetica, sans-serif;
}

.memories-form-text {
  height: 100px;
  padding: 5px;
  margin-bottom: 15px;
  text-align: start;
  background-color: #E6F0F9;
}

.memories-submit {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

/* width */
.memories-list::-webkit-scrollbar {
  width: 15px;
}

/* Track */
.memories-list::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
.memories-list::-webkit-scrollbar-thumb {
  background: darkgray;
  border-style: solid;
  border-width: 2px;
  border-left-color: rgb(196, 196, 196);
  border-top-color: rgb(196, 196, 196);
  box-sizing: border-box;
}

.memories-gif {
  padding-bottom: 15px;
  display: block;
  margin: 0 auto;
  width: 90%;
}

